--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     // dialog
     <string name="notice">Notice</string>
     <string name="successful">Successful</string>
+    <string name="not_found">Not found</string>
 
     //
     <string name="none">none</string>
